force-app/main/default/objects/sugati__Individual_Booking_Detail__c/sugati__Individual_Booking_Detail__c.object-meta.xml
<CustomObject>
    <label>Individual Booking Detail</label>
    <nameField>
        <displayFormat>IBD-{0000000000}</displayFormat>
        <label>Individual Booking Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Individual Booking Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>