force-app/main/default/objects/sugati__Individual_Booking_Detail__c/fields/sugati__S_IBD_Agency_Comm_VAT_Booking_after_canx__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_IBD_Agency_Comm_VAT_Booking_after_canx__c</fullName>
    <label>Agency Comm VAT (Booking) after canx</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>