force-app/main/default/objects/sugati__Individual_Booking_Detail__c/fields/sugati__S_IBD_Agency_Commission_VAT__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_IBD_Agency_Commission_VAT__c</fullName>
    <label>Agency Commission VAT Percent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>