force-app/main/default/objects/sugati__Individual_Booking_Detail__c/fields/sugati__S_IBD_Agency_Commission_VAT_Amt_Booking__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_IBD_Agency_Commission_VAT_Amt_Booking__c</fullName>
    <label>Agency Commission VAT Amount (Booking)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>