force-app/main/default/objects/sugati__Individual_Booking_Detail__c/fields/sugati__S_IBD_Agent_Commission_Amount__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_IBD_Agent_Commission_Amount__c</fullName>
    <description>Shows your Agent Commission as a value and updates Agent Commission Percent</description>
    <label>Agent Commission Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>