force-app/main/default/objects/sugati__Individual_Booking_Detail__c/fields/sugati__S_IBD_Agent_Commission_Override_Amount__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_IBD_Agent_Commission_Override_Amount__c</fullName>
    <description>Ability to enter a specific Agent Commission Value. If there is a figure in this field then the system will use this figure and ignore IBD_Agent_Commission_Amount</description>
    <label>Agent Commission Override Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>