force-app/main/default/objects/sugati__Individual_Booking_Detail__c/fields/sugati__S_IBD_Cancellation_Amount_Supplier__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_IBD_Cancellation_Amount_Supplier__c</fullName>
    <label>Cancellation Amount in Supplier Currency</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>