force-app/main/default/objects/sugati__Individual_Booking_Detail__c/fields/sugati__S_IBD_Cancellation_Charge__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_IBD_Cancellation_Charge__c</fullName>
    <description>The proportion of the IBD_Individual_Sell_Price_Booking_Currency that still needs to be paid due to cancellation. Updates Cancellation Amount when this figure is changed.</description>
    <label>Cancellation Charge %</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>