force-app/main/default/objects/sugati__Individual_Booking_Detail__c/fields/sugati__S_IBD_Cancellation_Date__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_IBD_Cancellation_Date__c</fullName>
    <label>Cancellation Date</label>
    <type>Date</type>
</CustomField>