force-app/main/default/objects/sugati__Individual_Booking_Detail__c/fields/sugati__S_IBD_Client_Cancellation_Rule__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_IBD_Client_Cancellation_Rule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Which cancellation rule has been used to calculate the cancellation amount to the client</description>
    <label>Client Cancellation Rule</label>
    <referenceTo>sugati__Rule__c</referenceTo>
    <relationshipLabel>Individual Booking Details</relationshipLabel>
    <relationshipName>Individual_Booking_Details</relationshipName>
    <type>Lookup</type>
</CustomField>