force-app/main/default/objects/sugati__Individual_Booking_Detail__c/fields/sugati__S_IBD_Client_Deposit_Amount__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_IBD_Client_Deposit_Amount__c</fullName>
    <description>Deposit Amount due by the client</description>
    <label>Client Deposit Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>