force-app/main/default/objects/sugati__Individual_Booking_Detail__c/fields/sugati__S_IBD_Client_Deposit_Rule__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_IBD_Client_Deposit_Rule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Rule that sets the deposit amount for the Client</description>
    <label>Client Deposit Rule</label>
    <referenceTo>sugati__Rule__c</referenceTo>
    <relationshipLabel>Individual Booking Details (Client Deposit Rule)</relationshipLabel>
    <relationshipName>Individual_Booking_Details2</relationshipName>
    <type>Lookup</type>
</CustomField>