force-app/main/default/objects/sugati__Individual_Booking_Detail__c/fields/sugati__S_IBD_Costing_Breakdown_Level__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_IBD_Costing_Breakdown_Level__c</fullName>
    <description>Copied from parent Supplier Booking (via Supplier Cost)</description>
    <formula>sugati__S_IBD_Supplier_Cost__r.sugati__S_SC_Costing_Breakdown_Level__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Costing Breakdown Level</label>
    <type>Text</type>
</CustomField>