force-app/main/default/objects/sugati__Individual_Booking_Detail__c/fields/sugati__S_IBD_Costing_Source__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_IBD_Costing_Source__c</fullName>
    <description>The information which is used to determine the source of cost. Whether it was manually created or created from the Load Rates button.</description>
    <label>Costing Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Manual</fullName>
            </value>
            <value>
                <fullName>Rate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>