force-app/main/default/objects/sugati__Individual_Booking_Detail__c/fields/sugati__S_IBD_Costing_Type__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_IBD_Costing_Type__c</fullName>
    <formula>TEXT(sugati__S_IBD_Supplier_Cost__r.sugati__SC_Supplier_Booking__r.sugati__SB_Costing_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Costing Type</label>
    <type>Text</type>
</CustomField>