force-app/main/default/objects/sugati__Individual_Booking_Detail__c/fields/sugati__S_IBD_Discount_Campaign__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_IBD_Discount_Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Discount Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Individual Booking Details</relationshipLabel>
    <relationshipName>Individual_Booking_Details</relationshipName>
    <type>Lookup</type>
</CustomField>