force-app/main/default/objects/sugati__Individual_Booking_Detail__c/fields/sugati__S_IBD_Discount_Reason__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_IBD_Discount_Reason__c</fullName>
    <label>Discount Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>