force-app/main/default/objects/sugati__Individual_Booking_Detail__c/fields/sugati__S_IBD_Duration__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_IBD_Duration__c</fullName>
    <formula>sugati__S_IBD_Supplier_Cost__r.sugati__SC_Supplier_Booking__r.sugati__SB_Duration__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>