force-app/main/default/objects/sugati__Individual_Booking_Detail__c/fields/sugati__S_IBD_Group__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_IBD_Group__c</fullName>
    <description>This will be used when grouping IBDs together - for example, if the breakdown is client group and we add a new cost, we will create IBDs for the client group / occupancy type and group them together with this field.</description>
    <label>Group</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>