force-app/main/default/objects/sugati__Individual_Booking_Detail__c/fields/sugati__S_IBD_Group_Member__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_IBD_Group_Member__c</fullName>
    <description>The traveller who has generated this cost</description>
    <label>Group Member</label>
    <referenceTo>sugati__Group_Member__c</referenceTo>
    <relationshipLabel>Individual Booking Details</relationshipLabel>
    <relationshipName>Individual_Booking_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>