force-app/main/default/objects/sugati__Individual_Booking_Detail__c/fields/sugati__S_IBD_Group_Member_Name__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_IBD_Group_Member_Name__c</fullName>
    <formula>sugati__S_IBD_Group_Member__r.sugati__GM_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Group Member Name</label>
    <type>Text</type>
</CustomField>