force-app/main/default/objects/sugati__Individual_Booking_Detail__c/fields/sugati__S_IBD_Ind_Sell_Price_Agency_Com_Supplier__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_IBD_Ind_Sell_Price_Agency_Com_Supplier__c</fullName>
    <description>Individual Sell Price (Supplier Currency) - Agency Commission</description>
    <label>Ind Sell Price - Agency Com (Supplier)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>