force-app/main/default/objects/sugati__Individual_Booking_Detail__c/fields/sugati__S_IBD_Individual_Gross_Cost_Booking__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_IBD_Individual_Gross_Cost_Booking__c</fullName>
    <description>Gross Cost</description>
    <label>Individual Gross Cost (Booking Currency)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>