force-app/main/default/objects/sugati__Individual_Booking_Detail__c/fields/sugati__S_IBD_Is_Price_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_IBD_Is_Price_Adjustment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is set to true automatically if this IBD is for a Price Adjustment line</description>
    <label>Is Price Adjustment</label>
    <type>Checkbox</type>
</CustomField>