force-app/main/default/objects/sugati__Individual_Booking_Detail__c/fields/sugati__S_IBD_Is_Tour_price__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_IBD_Is_Tour_price__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Tour price</label>
    <type>Checkbox</type>
</CustomField>