force-app/main/default/objects/sugati__Individual_Booking_Detail__c/fields/sugati__S_IBD_Item_Category__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_IBD_Item_Category__c</fullName>
    <description>Categorises the cost, ie is it a standard gross cost, cancellation cost, Special offer etc.</description>
    <label>Item Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Gross Cost</fullName>
                <default>true</default>
                <label>Gross Cost</label>
            </value>
            <value>
                <fullName>Cancellation</fullName>
            </value>
            <value>
                <fullName>Promo Code</fullName>
            </value>
            <value>
                <fullName>Manual Discount</fullName>
            </value>
            <value>
                <fullName>Earlybird Discount</fullName>
            </value>
            <value>
                <fullName>Bank Charges</fullName>
            </value>
            <value>
                <fullName>Special Favour</fullName>
            </value>
            <value>
                <fullName>Special Offer</fullName>
            </value>
            <value>
                <fullName>Tax</fullName>
            </value>
            <value>
                <fullName>Administration Fees</fullName>
            </value>
            <value>
                <fullName>Credit Card Fees</fullName>
            </value>
            <value>
                <fullName>Fixed Cost</fullName>
            </value>
            <value>
                <fullName>Variable Cost</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>