force-app/main/default/objects/sugati__Individual_Booking_Detail__c/fields/sugati__S_IBD_Location__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_IBD_Location__c</fullName>
    <formula>sugati__S_IBD_Supplier_Cost__r.sugati__SC_Supplier_Booking__r.sugati__S_SB_From_Place_Location__c</formula>
    <label>Location</label>
    <type>Text</type>
</CustomField>