force-app/main/default/objects/sugati__Individual_Booking_Detail__c/fields/sugati__S_IBD_Locked__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_IBD_Locked__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether the Record is locked or not - controlled at opportunity</description>
    <label>Locked</label>
    <type>Checkbox</type>
</CustomField>