force-app/main/default/objects/sugati__Individual_Booking_Detail__c/fields/sugati__S_IBD_Margin_Amount__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_IBD_Margin_Amount__c</fullName>
    <description>Shows your Margin as a value and updates Margin Percent</description>
    <label>Margin Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>