force-app/main/default/objects/sugati__Individual_Booking_Detail__c/fields/sugati__S_IBD_Margin_Type__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_IBD_Margin_Type__c</fullName>
    <label>Margin Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Percent</fullName>
            </value>
            <value>
                <fullName>Amount</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>