force-app/main/default/objects/sugati__Individual_Booking_Detail__c/fields/sugati__S_IBD_Mark_Up_Amount__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_IBD_Mark_Up_Amount__c</fullName>
    <description>Shows your Mark-Up as a value and updates Mark-Up Percent</description>
    <label>Mark-Up Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>