force-app/main/default/objects/sugati__Individual_Booking_Detail__c/fields/sugati__S_IBD_Mark_Up_Percent__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_IBD_Mark_Up_Percent__c</fullName>
    <description>Shows your Mark-Up as a % and updates Mark-Up Value</description>
    <label>Mark-Up Percent</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>