force-app/main/default/objects/sugati__Individual_Booking_Detail__c/fields/sugati__S_IBD_Mark_Up_Type__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_IBD_Mark_Up_Type__c</fullName>
    <description>Allows you to Pick Percent or Amount</description>
    <label>Mark-Up Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Amount</fullName>
            </value>
            <value>
                <fullName>Percent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>