force-app/main/default/objects/sugati__Individual_Booking_Detail__c/fields/sugati__S_IBD_Net_Cost_after_canc_supp_curr__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_IBD_Net_Cost_after_canc_supp_curr__c</fullName>
    <formula>sugati__S_IBD_Supplier_Canc_Amt_Supp_Currency__c -  sugati__S_IBD_Supplier_Comm_after_cancellation__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Net Cost after cancellation in supplier currency</inlineHelpText>
    <label>Net Cost after cancellation - supp curr</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>