force-app/main/default/objects/sugati__Individual_Booking_Detail__c/fields/sugati__S_IBD_Net_Sell_after_canc_book_curr__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_IBD_Net_Sell_after_canc_book_curr__c</fullName>
    <formula>sugati__S_IBD_Net_Sell_after_canc_supp_curr__c / sugati__S_IBD_Supplier_Cost__r.sugati__SC_Exchange_Rate_Lookup__r.sugati__ER_Exchange_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Net Sell price after cancellation in booking currency</inlineHelpText>
    <label>Net Sell after cancellation book curr</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>