force-app/main/default/objects/sugati__Individual_Booking_Detail__c/fields/sugati__S_IBD_Net_Sell_after_canc_supp_curr__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_IBD_Net_Sell_after_canc_supp_curr__c</fullName>
    <inlineHelpText>Net Sell Price after cancellation in supplier currency</inlineHelpText>
    <label>Net Sell after cancellation supp curr</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>