force-app/main/default/objects/sugati__Individual_Booking_Detail__c/fields/sugati__S_IBD_Nights__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_IBD_Nights__c</fullName>
    <description>Nights of the stay</description>
    <label>Nights</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>