force-app/main/default/objects/sugati__Individual_Booking_Detail__c/fields/sugati__S_IBD_Occupancy_No__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_IBD_Occupancy_No__c</fullName>
    <description>This field is used purely for tours and should not be manually changed or displayed.</description>
    <inlineHelpText>This field is used purely for tours and should not be manually changed or displayed.</inlineHelpText>
    <label>Occupancy No</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>