force-app/main/default/objects/sugati__Individual_Booking_Detail__c/fields/sugati__S_IBD_Occupancy_Type__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_IBD_Occupancy_Type__c</fullName>
    <description>Adult, Child or Infant</description>
    <label>Occupancy Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Adult</fullName>
            </value>
            <value>
                <fullName>Child</fullName>
            </value>
            <value>
                <fullName>Infant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>