force-app/main/default/objects/sugati__Individual_Booking_Detail__c/fields/sugati__S_IBD_Opportunity_Id__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_IBD_Opportunity_Id__c</fullName>
    <formula>CASESAFEID(sugati__S_IBD_Supplier_Cost__r.sugati__SC_Supplier_Booking__r.sugati__SB_Opportunity__c)</formula>
    <label>Opportunity Id</label>
    <type>Text</type>
</CustomField>