force-app/main/default/objects/sugati__Individual_Booking_Detail__c/fields/sugati__S_IBD_Opportunity_is_locked__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_IBD_Opportunity_is_locked__c</fullName>
    <formula>sugati__S_IBD_Supplier_Cost__r.sugati__SC_Supplier_Booking__r.sugati__SB_Opportunity__r.sugati__O_Lock__c</formula>
    <label>Opportunity is locked</label>
    <type>Checkbox</type>
</CustomField>