force-app/main/default/objects/sugati__Individual_Booking_Detail__c/fields/sugati__S_IBD_Option_Name_Number__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_IBD_Option_Name_Number__c</fullName>
    <formula>TEXT(sugati__S_IBD_Supplier_Cost__r.sugati__SC_Supplier_Booking__r.sugati__S_SB_Option_Number__c) + IF(NOT(ISBLANK(sugati__S_IBD_Supplier_Cost__r.sugati__SC_Supplier_Booking__r.sugati__S_SB_Option_Name__c)), &quot; : &quot;, &quot;&quot;) + sugati__S_IBD_Supplier_Cost__r.sugati__SC_Supplier_Booking__r.sugati__S_SB_Option_Name__c</formula>
    <label>Option Name / Number</label>
    <type>Text</type>
</CustomField>