force-app/main/default/objects/sugati__Individual_Booking_Detail__c/fields/sugati__S_IBD_Profit_After_Agency_Com_Booking__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_IBD_Profit_After_Agency_Com_Booking__c</fullName>
    <description>Converted from Profit After Agency Commission (supplier currency)</description>
    <label>Profit After Agency Commission (Booking)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>