force-app/main/default/objects/sugati__Individual_Booking_Detail__c/fields/sugati__S_IBD_Profit_After_Agency_Com_Supplier__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_IBD_Profit_After_Agency_Com_Supplier__c</fullName>
    <description>IBD_Profit_Supplier_Currency - IBD_Agent_Commission_Amount</description>
    <inlineHelpText>Profit after agency commission in supplier currency</inlineHelpText>
    <label>Profit After Agency Commission (Supplier</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>