force-app/main/default/objects/sugati__Individual_Booking_Detail__c/fields/sugati__S_IBD_Profit_after_canc_supp_curr__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_IBD_Profit_after_canc_supp_curr__c</fullName>
    <formula>sugati__S_IBD_Cancellation_Amount_Supplier__c - sugati__S_IBD_Supplier_Canc_Amt_Supp_Currency__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Profit after cancellation in supplier currency</inlineHelpText>
    <label>Profit after cancellation - supp curr</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>