force-app/main/default/objects/sugati__Individual_Booking_Detail__c/fields/sugati__S_IBD_Profit_ag_comm_after_canc_book__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_IBD_Profit_ag_comm_after_canc_book__c</fullName>
    <formula>sugati__S_IBD_Profit_ag_comm_after_canc_supp__c * sugati__S_IBD_Supplier_Cost__r.sugati__SC_Exchange_Rate_Lookup__r.sugati__ER_Exchange_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Profit - agency commission (after cancellation) in booking currency</inlineHelpText>
    <label>Profit - agency comm (after canc) book</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>