force-app/main/default/objects/sugati__Individual_Booking_Detail__c/fields/sugati__S_IBD_Profit_ag_comm_after_canc_supp__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_IBD_Profit_ag_comm_after_canc_supp__c</fullName>
    <formula>sugati__S_IBD_Profit_after_canc_supp_curr__c -  sugati__S_IBD_Agent_Comm_after_cancellation__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Profit - agency commission (after cancellation) in supplier currency</inlineHelpText>
    <label>Profit - agency comm (after canc) supp</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>