force-app/main/default/objects/sugati__Individual_Booking_Detail__c/fields/sugati__S_IBD_Profit_Supplier_Currency__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_IBD_Profit_Supplier_Currency__c</fullName>
    <description>Difference between Net Cost and Sell Price</description>
    <label>Profit (Supplier Currency)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>