force-app/main/default/objects/sugati__Individual_Booking_Detail__c/fields/sugati__S_IBD_Promo_Code__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_IBD_Promo_Code__c</fullName>
    <label>Promo/Discount Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>