force-app/main/default/objects/sugati__Individual_Booking_Detail__c/fields/sugati__S_IBD_Quantity__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_IBD_Quantity__c</fullName>
    <label>Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>