force-app/main/default/objects/sugati__Individual_Booking_Detail__c/fields/sugati__S_IBD_Rate__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_IBD_Rate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Look Up to Rate Record</description>
    <label>Rate</label>
    <referenceTo>sugati__RA_Rate__c</referenceTo>
    <relationshipLabel>Individual Booking Details</relationshipLabel>
    <relationshipName>Individual_Booking_Details</relationshipName>
    <type>Lookup</type>
</CustomField>