force-app/main/default/objects/sugati__Individual_Booking_Detail__c/fields/sugati__S_IBD_Reset_default_values__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_IBD_Reset_default_values__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is used to tell trip planner that the supplier or ground handler has changed, so the values for markup, margin and commission should be reset to find their new defaults.</description>
    <label>Reset default values</label>
    <type>Checkbox</type>
</CustomField>