force-app/main/default/objects/sugati__Individual_Booking_Detail__c/fields/sugati__S_IBD_Room_Type_Id__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_IBD_Room_Type_Id__c</fullName>
    <description>This is used in tours as a reference to the room type that this IBD represents.</description>
    <label>Room Type Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>